syntax = "proto3";

package org.m2sec.rpc;

message Header {
  string key = 1;
  string value = 2;
}

message Request {
  bool secure = 1;
  string host = 2;
  int32 port = 3;
  string version = 4;
  string method = 5;
  string fullPath = 6;
  repeated Header headers = 7;
  bytes content = 8;
}

message Response {
  string version = 1;
  int32 statusCode = 2;
  string reason = 3;
  repeated Header headers = 4;
  bytes content = 5;
}

service HttpHookService {
  rpc hookRequestToBurp(Request) returns (Request);
  rpc hookRequestToServer(Request) returns (Request);
  rpc hookResponseToBurp(Response) returns (Response);
  rpc hookResponseToClient(Response) returns (Response);
}